updated footer to set Copyright @2011 Classic & Sport Autos
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@3 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -241,9 +241,9 @@
 				<br/>
 				T&eacute;l&eacute;phone +33 (0)4.57.93.38.57 - T&eacute;l&eacute;copie +33 (0)4.57.93.38.57 - <a href="mailto:contact@classicetsportautos.fr">contact@classicetsportautos.fr</a>
 				<br/>
-				Responsable de publication : Jean-Fran&ccedil;ois Huguet
+				Copyright ©2011 Classic & Sport Autos, Tous droits réservés.
 				<br/>
-				Num&eacute;ro siren : <b>527 671 515</b>
+				Num&eacute;ro siren : 527 671 515
 			</div>
 			<div id="ju2com_inside">
 				<a href="../../default.htm" title="webdesigner & webmaster &eacute;ditorialiste">Designed by <span class="orange">ju</span><span class="vert">2</span><span class="violet">com</span></a>
