updated page description
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@6 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/atelier.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/atelier.html
@@ -84,7 +84,7 @@ jQuery(document).ready(function() {
 
 			<div class="col260_3">
 				<p>
-					Cliquez sur les albums pour d&eacute;couvrir en images notre atelier.
+				Cliquez sur les albums pour d&eacute;couvrir en images notre atelier ou les autres albums photos de Classic & Sport Autos.
 				</p>
 			</div>
 			<div class="clearit"></div>
