added link to auto-collection.org
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@7 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
@@ -78,6 +78,8 @@
 				</ul>
 			</div>
 			<div class="clearit"></div>
+			<br/><br/>
+<div style="text-align: left"><a href="http://www.auto-collection.org" target="_blank"><img src="http://www.auto-collection.org/images_fx/logoACnw.gif" border="0" width="120" height="40" alt="L'annuaire auto-collection.org"></a></div>
 		</div>
 		<div class="car"></div>
 		<div class="pieddepage">
