J'aide aussi mes clients à acheter ou à vendre leur véhicule ancien.
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@8 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/engagements.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/engagements.html
@@ -77,9 +77,7 @@
 					Mon activit&eacute; principale est l'entretien et la r&eacute;paration de voitures de collection
 					avec sp&eacute;cialit&eacute; en voitures anglaises, Jaguar, Lotus, Austin Healey, MG, Triumph...
 					mais ouvert aussi aux autres v&eacute;hicules de collection, en particulier italiens, Alfa Rom&eacute;o, Ferrari, Fiat, Lancia...
-					J'aide aussi mes clients &agrave; l'achat et &agrave; la vente de v&eacute;hicules anciens.
-
-
+					J'aide aussi mes clients à acheter ou à vendre leur véhicule ancien.
 				</p>
 			</div>
 			<div class="col260_3">
