fixed authod meta name
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@9 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -11,7 +11,7 @@
 
 <meta name="description" content="Classic & Sport Autos entretient, r&eacute;pare et pr&eacute;pare votre voiture ancienne. Quelque chose ne tourne pas rond ? Envie de passer le contr&ocirc;le technique en toute tranquillit&eacute; ? Besoin de pr&eacute;parer votre voiture &agrave; la vente, &agrave; un long trajet ? Classic et Sport Autos, sp&eacute;cialiste des belles anglaises et italiennes, propose diff&eacute;rents services d\'entretien complet dans un garage v&eacute;ritable mus&eacute;e de l\'automobile.">
 <meta name="keywords" content="entretient autos anciennes, r&eacute;pare et pr&eacute;pare votre  voiture ancienne">
-<meta name="author" content="Julien Espitallier & Classic et Sport Autos">
+<meta name="author" content="Classic & Sport Autos">
 <meta name="owner" content="">
 <meta name="copyright" content="Classic & Sport Autos">
 
