fixed author meta name and description
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@10 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -9,9 +9,12 @@
 <meta name="robots" content="index, follow">
 <meta name="revisit-after" content="2 days">
 
-<meta name="description" content="Classic & Sport Autos entretient, r&eacute;pare et pr&eacute;pare votre voiture ancienne. Quelque chose ne tourne pas rond ? Envie de passer le contr&ocirc;le technique en toute tranquillit&eacute; ? Besoin de pr&eacute;parer votre voiture &agrave; la vente, &agrave; un long trajet ? Classic et Sport Autos, sp&eacute;cialiste des belles anglaises et italiennes, propose diff&eacute;rents services d\'entretien complet dans un garage v&eacute;ritable mus&eacute;e de l\'automobile.">
+<meta name="description" content="Classic & Sport Autos entretien et la r&eacute;paration de voitures de collection
+					avec sp&eacute;cialit&eacute; en voitures anglaises, Jaguar, Lotus, Austin Healey, MG, Triumph...
+					mais ouvert aussi aux autres v&eacute;hicules de collection, en particulier italiens, Alfa Rom&eacute;o, Ferrari, Fiat, Lancia...
+					J'aide aussi mes clients à acheter ou à vendre leur véhicule ancien.">
 <meta name="keywords" content="entretient autos anciennes, r&eacute;pare et pr&eacute;pare votre  voiture ancienne">
-<meta name="author" content="Julien Espitallier & Classic et Sport Autos">
+<meta name="author" content="Classic & Sport Autos">
 <meta name="owner" content="">
 <meta name="copyright" content="Classic & Sport Autos">
 
