changed google analytics profile to handle multi top domains
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@14 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -102,22 +102,6 @@ function gallery() {
 
 <link rel="stylesheet" type="text/css" media="screen" href="jquery/css/slideshow.css">
 
-<script type="text/javascript">
-//Google Analytics
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-20953337-1']);
-  _gaq.push(['_setDomainName', 'none']);
-  _gaq.push(['_setAllowLinker', true]);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-
 	<script>
 		!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
 	</script>
@@ -157,6 +141,21 @@ function gallery() {
 		});
 	</script>
 
+<script type="text/javascript">
+//Google Analytics
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-20953337-3']);
+  _gaq.push(['_setDomainName', 'none']);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 
 <body>
@@ -183,6 +182,11 @@ function gallery() {
 
 				</div>
 			</div>
+
+				<!--div class="overview">Classic & Sport Autos entretien et répare votre voiture de collection.
+				<br/>Spécialité en voitures anglaises, Jaguar, Lotus, Austin Healey, MG, Triumph...
+				mais ouvert aussi aux autres véhicules de collection, en particulier italiens, Alfa Roméo, Ferrari, Fiat, Lancia...
+				<br/>Nous aidons aussi nos clients à acheter ou à vendre leur véhicule ancien.</div-->
 
 			<div class="col260">
 				<h1>C'est arriv&eacute; &agrave; Classic et Sport Autos</h1>
