changé titres h1 (ajouté Nos prestations) marques en italiques
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@15 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/engagements.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/engagements.html
@@ -56,7 +56,7 @@
 				<div class="clearit"></div>
 				<div class="espacepromo2"></div>
 			</div>
-			<h1>Nos engagements</h1>
+			<h1>Histoire d'une passion</h1>
 			<div class="col260">
 				<img src="img/atelier/jaguarTypeE_b.jpg" alt="" />
 				<p>
@@ -74,9 +74,14 @@
 					pouvant offrir un service de qualit&eacute; pour des travaux d'entretien ou de r&eacute;paration,
 					sans m&ecirc;me parler de restauration.
 					<br/>
+				</p>
+				<br/>
+				<h1>Nos prestations</h1>
+				<p>
 					Mon activit&eacute; principale est l'entretien et la r&eacute;paration de voitures de collection
-					avec sp&eacute;cialit&eacute; en voitures anglaises, Jaguar, Lotus, Austin Healey, MG, Triumph...
-					mais ouvert aussi aux autres v&eacute;hicules de collection, en particulier italiens, Alfa Rom&eacute;o, Ferrari, Fiat, Lancia...
+					avec sp&eacute;cialit&eacute; en voitures anglaises, <i>Jaguar, Lotus, Austin Healey, MG, Triumph...</i>
+					mais ouvert aussi aux autres v&eacute;hicules de collection, en particulier italiens, <i>Alfa Rom&eacute;o,
+					Ferrari, Fiat, Lancia...</i>
 					J'aide aussi mes clients à acheter ou à vendre leur véhicule ancien.
 				</p>
 			</div>
