revu encart Histoire d'une passion Transformé en Nos prestations avec description de nos activités
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@16 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -230,14 +230,18 @@ function gallery() {
 			</div>
 
 			<div class="col260_3">
-				<h1>Histoire d'une passion</h1>
+				<h1>Nos prestations</h1>
 				<a id="example3" href="img/visites/typeE_b.jpg" >
-				<img src="img/visites/typeE_b.jpg" alt="" />
+				<img src="img/visites/typeE_b.jpg" alt="" /></a>
 				<p>
-				    Passionné de toujours des belles voitures mais surtout des vieilles
-				    anglaises, Jean-François Huguet rénove une Jaguar Type E de 1963 et
-				    engage la rénovation d'une Jaguar XK 120 de 1953 avant de se décider
-				    à faire de cette passion un métier..
+					Nos activités principales &agrave; Classic & Sport Autos sont
+					l'entretien, la réparation, la mise au point et l'amélioration de
+					performances de voitures de collection.
+				</p>
+				<p>
+					Nous sommes spécialisés en voitures anglaises, <i>Jaguar, Aston Martin,
+					Lotus, Austin Healey, MG, Triumph...</i> mais nous entretenons aussi d'autres
+					véhicules de collection, en particulier italiens, <i>Alfa Roméo, Ferrari, Fiat, Lancia...</i>
 				</p>
 				<a class="plus" href="engagements.html">Lire la suite >></a>
 			</div>
