ajout de liens d'annuaires
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@17 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
@@ -80,6 +80,9 @@
 			<div class="clearit"></div>
 			<br/><br/>
 <div style="text-align: left"><a href="http://www.auto-collection.org" target="_blank"><img src="http://www.auto-collection.org/images_fx/logoACnw.gif" border="0" width="120" height="40" alt="L'annuaire auto-collection.org"></a></div>
+<SCRIPT LANGUAGE="JavaScript" SRC="http://www.anciennesdefrance.com/pub/ban88x31_1.htm"></SCRIPT>
+<br/><a href="http://www.gtliens.com/" target="_blank"><img src="http://www.gtliens.com/images/gtliens_annuaire-auto.gif" alt="Annuaire et moteur de recherche automobile" width="88" height="31" border="0"></a>
+<br/><a href="http://gazoline.net"><img src="http://gazoline.net/annuaire/images/gazolineref.gif" width="88" height="31" border="0"></a>
 		</div>
 		<div class="car"></div>
 		<div class="pieddepage">
