--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -9,8 +9,8 @@
 <meta name="robots" content="index, follow">
 <meta name="revisit-after" content="2 days">
 
-<meta name="description" content="Classic & Sport Autos entretient, r&eacute;pare et pr&eacute;pare votre voiture ancienne. Quelque chose ne tourne pas rond ? Envie de passer le contr&ocirc;le technique en toute tranquillit&eacute; ? Besoin de pr&eacute;parer votre voiture &agrave; la vente, &agrave; un long trajet ? Classic et Sport Autos, sp&eacute;cialiste des belles anglaises et italiennes, propose diff&eacute;rents services d\'entretien complet dans un garage v&eacute;ritable mus&eacute;e de l\'automobile.">
-<meta name="keywords" content="entretient autos anciennes, r&eacute;pare et pr&eacute;pare votre  voiture ancienne">
+<meta name="description" content="Vendez ou recherchez votre voiture ancienne gr&acirc;ce &agrave; Classic et Sport Autos">
+<meta name="keywords" content="vente, achat, ancienne">
 <meta name="author" content="Classic & Sport Autos">
 <meta name="owner" content="">
 <meta name="copyright" content="Classic & Sport Autos">
