--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -13,7 +13,7 @@
 					avec sp&eacute;cialit&eacute; en voitures anglaises, Jaguar, Lotus, Austin Healey, MG, Triumph...
 					mais ouvert aussi aux autres v&eacute;hicules de collection, en particulier italiens, Alfa Rom&eacute;o, Ferrari, Fiat, Lancia...
 					J'aide aussi mes clients à acheter ou à vendre leur véhicule ancien.">
-<meta name="keywords" content="entretient autos anciennes, r&eacute;pare et pr&eacute;pare votre  voiture ancienne">
+<meta name="keywords" content="entretien autos anciennes, r&eacute;pare et pr&eacute;pare votre  voiture ancienne, r&eacute;paration, pr&eacute;paration, anglaises, italiennes">
 <meta name="author" content="Classic & Sport Autos">
 <meta name="owner" content="">
 <meta name="copyright" content="Classic & Sport Autos">
