--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -43,7 +43,7 @@
 			*   Examples - images
 			*/
 
-			$("a[rel=mgb_cabriolet_1974_restauree]").fancybox({
+			$("a[rel=dynolite_apg_30]").fancybox({
 				'transitionIn'		: 'none',
 				'transitionOut'		: 'none',
 				'titlePosition' 	: 'over',
@@ -52,7 +52,16 @@
 				}
 			});
 
-			$("a[rel=fiat_500]").fancybox({
+			$("a[rel=dynolite_hypoid]").fancybox({
+				'transitionIn'		: 'none',
+				'transitionOut'		: 'none',
+				'titlePosition' 	: 'over',
+				'titleFormat'		: function(title, currentArray, currentIndex, currentOpts) {
+					return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+				}
+			});
+
+			$("a[rel=dynolite_gearoil_40]").fancybox({
 				'transitionIn'		: 'none',
 				'transitionOut'		: 'none',
 				'titlePosition' 	: 'over',
@@ -102,68 +111,79 @@
 				<p>
 					Vous recherchez une voiture ancienne ou d&eacute;sirez vendre la votre ? Ecrivez &agrave; <a href="mailto:contact@classicetsportautos.fr">contact@classicetsportautos.fr</a> ou appelez le +33(0)4.57.93.38.57.
 				</p>
-				<p style="color: red; font-size: 17px;">PAGE EN CONSTRUCTION, LE CONTENU CI-DESSOUS EST FAUX ET INVENTE!!</p>
 				<br/><br/>
 				<div class="col560">
 					<h1>Vente</h1>
 					<hr/>
 						<div class="vente-titre">
-							<a rel="mgb_cabriolet_1974_restauree" href="img/visites/mgb_b.JPG" title="MGB 1967">
-							<img class="pict" src="img/visites/mgb_s.JPG" alt="" /></a>
-							<h2>MGB Cabriolet 1974 Restaur&eacute;e</h2>
-							<p>Prix: <strong>11 500&euro;</strong></p>
-							<p>Ville: <strong>38130 Echirolles</strong></p>
-							<p>Restauration: <strong>Peinture</strong></p>
+							<a rel="dynolite_apg_30" href="img/ventes/dynolite_apg30.jpg" title="Dynolite APG 30">
+							<img class="pict" src="img/ventes/dynolite_apg30_s.jpg" alt="" /></a>
+							<h2>Dynolite APG 30</h2>
+							<p>Gamme <strong>"APG" 1950 - 1975</strong></p>
+							<p>(Multigrade D&eacute;tergente & Dispersante)</p>
 						</div>
 						<div class="vente-col1">
-							<p>Ann&eacute;e-mod&egrave;le: <strong>1974</strong></p>
-							<p>Kilom&eacute;trage: <strong>99 000 KM</strong></p>
-							<p>Overdrive: <strong>Oui</strong></p>
+							<p>Multigrade <strong>25w/70</strong></p>
+							<p>Prix: <strong>7.15&euro;</strong></p>
 						</div>
 						<div class="vente-col2">
-							<a rel="mgb_cabriolet_1974_restauree" href="img/atelier/fiat500_b.jpg" title="Fiat 500">
-							<img class="icone" src="img/atelier/fiat500_s.jpg" alt="" /></a>
-							<a rel="mgb_cabriolet_1974_restauree" href="img/atelier/Jaguar_b.jpg" title="Jaguar">
-							<img class="icone" src="img/atelier/Jaguar_s.jpg" alt="" /></a>
+							<a rel="dynolite_apg_30" href="img/ventes/dynolite_apg30_img.jpg" title="Dynolite APG 30">
+							<img class="icone" src="img/ventes/dynolite_apg30_img_s.jpg" alt="" /></a>
 						<p>
-						Vends MGB couleur "Red Flag". 99 000 kms au compteur.
-						Restauration faite en 2007: la voiture a &eacute;t&eacute; mise &agrave; nue,
-						sabl&eacute;e et peinte dans cette jolie couleur anglaise Red Flag.
-						A noter: roues à fils, overdrive, pare-chocs chrom&eacute;s, etc..
-						Int&eacute;rieur cuir, moquette neuve, capote neuve, couvre tonneau,
-						hard top. V&eacute;hicule visible en journ&eacute;e seulement.
+						Huile spécifique Multigrade 25w/70 remplaçant les Monogrades SAE40. Cette viscosité est spécialement
+						adaptée pour les moteurs d’après-guerre de forte cylindrées ou pour les moteur possédant une pompe à
+						huile de faible débit, ainsi que pour la majorité des Motos d’après guerre.
+						Cette huile contient des additifs spéciaux qui de par leurs particularités amélioreront la pression à
+						chaud ainsi que la consommation d’huile.
 						</p>
-						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 4 F&eacute;vrier 2011.</p>
+						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 4 Mars 2011.</p>
 						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
 						</div>
 						<div class="clearit"></div>
 					<hr/>
 						<div class="vente-titre">
-							<a rel="fiat_500" href="img/atelier/fiat500_b.jpg" title="Fiat 500">
-							<img class="pict" src="img/atelier/fiat500_s.jpg" alt="" /></a>
-							<h2>Fiat 500 <b><font color="red">VENDUE</font></b></h2>
-							<p>Prix: <strong>6 000&euro;</strong></p>
-							<p>Ville: <strong>29000 Concarneau</strong></p>
-							<p>Restauration: <strong>Moteur, int&eacute;rieur</strong></p>
+							<a rel="dynolite_hypoid" href="img/ventes/dynolite_hypoid.jpg" title="Dynolite Hypo&iuml;d 85W/140">
+							<img class="pict" src="img/ventes/dynolite_hypoid_s.jpg" alt="" /></a>
+							<h2>Dynolite Hypo&iuml;d 85W/140</h2>
+							<p>Gamme <strong>TRANSMISSION</strong></p>
 						</div>
 						<div class="vente-col1">
-							<p>Ann&eacute;e-mod&egrave;le: <strong>1971</strong></p>
-							<p>Kilom&eacute;trage: <strong>125 000 KM</strong></p>
-							<p>Overdrive: <strong>Oui</strong></p>
+							<p>Prix: <strong>7.15&euro;</strong></p>
 						</div>
 						<div class="vente-col2">
-							<a rel="fiat_500" href="img/atelier/fiat500_b.jpg" title="Fiat 500">
-							<img class="icone" src="img/atelier/fiat500_s.jpg" alt="" /></a>
-							<a rel="fiat_500" href="img/atelier/Jaguar_b.jpg" title="Jaguar">
-							<img class="icone" src="img/atelier/Jaguar_s.jpg" alt="" /></a>
+							<a rel="dynolite_hypoid" href="img/ventes/dynolite_hypoid_img.jpg" title="Dynolite Hypo&iuml;d 85W/140">
+							<img class="icone" src="img/ventes/dynolite_hypoid_img_s.jpg" alt="" /></a>
 						<p>
-						Vends belle Fiat 500 de 1971. Moteur refait, compressions parfaites.
+						Cette huile multigrade remplace la EP90 et dépasse la Norme «GL5». Elle est à utiliser dans la plupart
+						des ponts Hypoïdes d’après 1960. (voir manuel du conducteur)
 						</p>
+						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 4 Mars 2011.</p>
+						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
+						</div>
+						<div class="clearit"></div>
+					<hr/>
+						<div class="vente-titre">
+							<a rel="dynolite_gearoil_40" href="img/ventes/dynolite_gearoil40.jpg" title="Dynolite GearOil 40">
+							<img class="pict" src="img/ventes/dynolite_gearoil40_s.jpg" alt="" /></a>
+							<h2>Dynolite GearOil 40</h2>
+							<p>Gamme <strong>TRANSMISSION</strong></p>
+							<p><strong>Huile de boîte</strong></p>
+						</div>
+						<div class="vente-col1">
+							<p>Multigrade <strong>25w/70</strong></p>
+							<p>Prix: <strong>7.15&euro;</strong></p>
+						</div>
+						<div class="vente-col2">
+							<a rel="dynolite_gearoil_40" href="img/ventes/dynolite_gearoil40_img.jpg" title="Dynolite GearOil 40">
+							<img class="icone" src="img/ventes/dynolite_gearoil40_img_s.jpg" alt="" /></a>
 						<p>
-						Carrosserie tr&egrave;s saine, Contr&ocirc;le technique OK.
-						Possibilit&eacute; de livraison r&eacute;gion Rhone-Alpes.
+						Cette huile multigrade est à utiliser en remplacement des SAE40 et EP90. Elle est
+						compatibles avec les boîtes à taille droite, synchrones et à pignons hypocycloïdes tels que les overdrives.
+						Elles ne contient aucun additif de type «EP» qui détruit les métaux tels que le Bronze le Cuivre et le
+						Laiton. Cette huile ne contient aucun additif d’antifriction moléculaire à effet de surface provoquant
+						le patinage des embrayages d’overdrive et des boîtes à présélection (Cotal, Wilson).
 						</p>
-						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 3 F&eacute;vrier 2011.</p>
+						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 4 Mars 2011.</p>
 						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
 						</div>
 						<div class="clearit"></div>
