--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -131,10 +131,10 @@
 							<img class="icone" src="img/ventes/dynolite_apg30_img_s.jpg" alt="" /></a>
 						<p>
 						Huile spécifique Multigrade 25w/70 remplaçant les Monogrades SAE40. Cette viscosité est spécialement
-						adaptée pour les moteurs d’après-guerre de forte cylindrées ou pour les moteur possédant une pompe à
-						huile de faible débit, ainsi que pour la majorité des Motos d’après guerre.
+						adaptée pour les moteurs d'après-guerre de forte cylindrées ou pour les moteur possédant une pompe à
+						huile de faible débit, ainsi que pour la majorité des Motos d'après guerre.
 						Cette huile contient des additifs spéciaux qui de par leurs particularités amélioreront la pression à
-						chaud ainsi que la consommation d’huile.
+						chaud ainsi que la consommation d'huile.
 						</p>
 						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 4 Mars 2011.</p>
 						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
@@ -155,7 +155,7 @@
 							<img class="icone" src="img/ventes/dynolite_hypoid_img_s.jpg" alt="" /></a>
 						<p>
 						Cette huile multigrade remplace la EP90 et dépasse la Norme «GL5». Elle est à utiliser dans la plupart
-						des ponts Hypoïdes d’après 1960. (voir manuel du conducteur)
+						des ponts Hypoïdes d'après 1960.
 						</p>
 						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 4 Mars 2011.</p>
 						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
@@ -180,8 +180,8 @@
 						Cette huile multigrade est à utiliser en remplacement des SAE40 et EP90. Elle est
 						compatibles avec les boîtes à taille droite, synchrones et à pignons hypocycloïdes tels que les overdrives.
 						Elles ne contient aucun additif de type «EP» qui détruit les métaux tels que le Bronze le Cuivre et le
-						Laiton. Cette huile ne contient aucun additif d’antifriction moléculaire à effet de surface provoquant
-						le patinage des embrayages d’overdrive et des boîtes à présélection (Cotal, Wilson).
+						Laiton. Cette huile ne contient aucun additif d'antifriction moléculaire à effet de surface provoquant
+						le patinage des embrayages d'overdrive et des boîtes à présélection (Cotal, Wilson).
 						</p>
 						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 4 Mars 2011.</p>
 						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
