mis le prix par litre
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@22 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -124,7 +124,7 @@
 						</div>
 						<div class="vente-col1">
 							<p>Multigrade <strong>25w/70</strong></p>
-							<p>Prix: <strong>7.15&euro;</strong></p>
+							<p>Prix: <strong>7.15&euro; / litre</strong></p>
 						</div>
 						<div class="vente-col2">
 							<a rel="dynolite_apg_30" href="img/ventes/dynolite_apg30_img.jpg" title="Dynolite APG 30">
@@ -148,7 +148,7 @@
 							<p>Gamme <strong>TRANSMISSION</strong></p>
 						</div>
 						<div class="vente-col1">
-							<p>Prix: <strong>7.15&euro;</strong></p>
+							<p>Prix: <strong>7.15&euro; / litre</strong></p>
 						</div>
 						<div class="vente-col2">
 							<a rel="dynolite_hypoid" href="img/ventes/dynolite_hypoid_img.jpg" title="Dynolite Hypo&iuml;d 85W/140">
@@ -171,7 +171,7 @@
 						</div>
 						<div class="vente-col1">
 							<p>Multigrade <strong>25w/70</strong></p>
-							<p>Prix: <strong>7.15&euro;</strong></p>
+							<p>Prix: <strong>7.15&euro; / litre</strong></p>
 						</div>
 						<div class="vente-col2">
 							<a rel="dynolite_gearoil_40" href="img/ventes/dynolite_gearoil40_img.jpg" title="Dynolite GearOil 40">
