Footer all pages: - enlevé partie Contact (email et tel) - ajouté Horaires d'ouverture - remplacé Design by ju2 par javascript ju2 Contact: - ajouté Horaires d'ouverture au body
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@23 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/engagements.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/engagements.html
@@ -125,19 +125,19 @@
 				</p>
 			</div>
 			<div class="col260_3">
-				<h2>Contact</h2>
+				<h2>Horaires d'ouverture</h2>
 				<ul>
-					<li><b>e-mail</b> : <a href="mailto:contact@classicetsportautos.fr">contact@classicetsportautos.fr</a></li>
-					<li><b>T&eacute;l</b> : +33 (0)4.57.93.38.57</li>
-					<li><b>Fax</b> : +33 (0)4.57.93.38.57</li>
+					<li>Du Lundi au Vendredi</li>
+					<li>de 9h00 &agrave; 12h00</li>
+					<li>et de 14h00 &agrave; 18h30</li>
 				</ul>
-				<br/>
 				<br/>
 				<h2>Adresse</h2>
 				<ul>
 					<li>Classic et Sport Autos</li>
 					<li>20 RUE DU BEAL</li>
 					<li>38400 Saint-martin-d'h&egrave;res</li>
+					<li><b>T&eacute;l</b> : +33 (0)4.57.93.38.57</li>
 				</ul>
 			</div>
 			<div class="clearit"></div>
@@ -150,9 +150,7 @@
 				<br/>
 				Num&eacute;ro siren : 527 671 515
 			</div>
-			<div id="ju2com_inside">
-				<a href="../../default.htm" title="webdesigner & webmaster &eacute;ditorialiste">Designed by <span class="orange">ju</span><span class="vert">2</span><span class="violet">com</span></a>
-			</div>
+			<script type="text/javascript" src="http://www.ju2com.fr/js/signatureFdNr.js"></script>
 		</div>
 	</div><!--fin container-->
 	</div><!--fin background-->
