Changement du module Actualité - salon des collectionneurs - shooting photo type E
enlevé apéro de nouvelle année

git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@24 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -228,15 +228,14 @@
 			<div class="col260">
 				<h2>Actualit&eacute;</h2>
 				<p>
-					<b>Samedi 8 Janvier, Classic & Sport Autos re&ccedil;oit</b> en toute
-					d&eacute;contraction amis, clients et passionn&eacute;s afin de
-					f&ecirc;ter la nouvelle ann&eacute;e. D&eacute;couvrez <a href="http://picasaweb.google.com/102248362076930809972/NouvelleAnneeClassicEtSportAutos?authkey=Gv1sRgCLGUuIjY3bPaSw#">
-					les photos de ce rassemblement de belles voitures >></a> Austin
-					Healey Sprite,	Jaguar Type E, Saab 96 v4, Porsche 912,
-					Ferrari Testarossa.. A noter le stand appr&eacute;ci&eacute;
-					de Tony (<a href="http://www.facebook.com/pages/caruman-production/130119480351004">Caruman production</a>)
-					qui r&eacute;aliste de tr&egrave;s beaux cadres d&eacute;co avec le
-					v&eacute;hicule de votre choix.
+					<b>Dimanche 13 Mars</b>, Classic & Sport Autos &eacute;tait pr&eacute;sent
+					au <b>Salon des Collectionneurs</b> &agrave; Sassenage.
+					Une belle occasion de montrer deux voitures du garage, la Jaguar Type E
+					et la MG B. On a aussi notamment pu admirer une Alfa Romeo Giulietta, une Alfa Romeo
+					Montreal, une Austin Healey 3000 et une Salmson de 1960.<br/>
+					<b>Samedi 5 F&eacute;vrier</b>, shooting photo pour la Type E qui va se
+					retrouver sur la pochette du nouvel album d'un groupe Grenoblois de soul funk,
+					<a href="http://spockmarlone.free.fr/">Spock Marlone Section</a>.
 				</p>
 			</div>
 			<div class="col260_3">
