added facebook social plugin removed "C'est arrivé à C&SA" (enlevé vidéo moteur xk120) mis à jour bandeau en haut. Remplacé photo flyer par photo voitures devant garage
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@25 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -177,26 +177,28 @@ function gallery() {
 				<ul class="slideshow">
 				    <li class="show"><a href="#"><img src="img/bandeauGarage.jpg" width="858" height="250" title="Atelier" alt=""/></a></li>
 				    <li><a href="#"><img src="img/bandeauTypeE.jpg" width="858" height="250" title="Jaguar Type E" alt=""/></a></li>
-				    <li><a href="#"><img src="img/bandeauFlyer2011.jpg" width="665" height="250" title="Premier &eacute;v&egrave;nement de l'ann&eacute;e 2011" alt=""/></a></li>
+                                    <li><a href="#"><img src="img/bandeauDevantGarage.jpg" width="858" height="250" title="" alt=""/></a></li>
 				</ul>
 
 				</div>
 			</div>
 
-				<!--div class="overview">Classic & Sport Autos entretien et répare votre voiture de collection.
-				<br/>Spécialité en voitures anglaises, Jaguar, Lotus, Austin Healey, MG, Triumph...
-				mais ouvert aussi aux autres véhicules de collection, en particulier italiens, Alfa Roméo, Ferrari, Fiat, Lancia...
-				<br/>Nous aidons aussi nos clients à acheter ou à vendre leur véhicule ancien.</div-->
-
 			<div class="col260">
-				<h1>C'est arriv&eacute; &agrave; Classic et Sport Autos</h1>
-				<iframe title="YouTube video player" class="youtube-player" type="text/html" width="260" height="228" src="http://www.youtube.com/embed/GLnxw40f9HM" frameborder="0" allowFullScreen></iframe>
+				<h1>Nos prestations</h1>
+				<a id="example3" href="img/visites/typeE_b.jpg" >
+				<img src="img/visites/typeE_b.jpg" alt="" /></a>
 				<p>
-					<i>Premier redémarrage d'un moteur de Jaguar XK120 après plus de 30 ans de silence.</i>
+					Nos activités principales &agrave; Classic & Sport Autos sont
+					l'entretien, la réparation, la mise au point et l'amélioration de
+					performances de voitures de collection.
 				</p>
-				<br/>
-<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.classicetsportautos.fr%2F&amp;layout=standard&amp;show_faces=false&amp;width=260&amp;action=like&amp;colorscheme=light&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:260px; height:35px;" allowTransparency="true"></iframe>
-			</div>
+				<p>
+					Nous sommes spécialisés en voitures anglaises, <i>Jaguar, Aston Martin,
+					Lotus, Austin Healey, MG, Triumph...</i> mais nous entretenons aussi d'autres
+					véhicules de collection, en particulier italiens, <i>Alfa Roméo, Ferrari, Fiat, Lancia...</i>
+				</p>
+				<a class="plus" href="engagements.html">Lire la suite >></a>                            
+                        </div>
 
 			<div class="col260">
 				<h1>L'atelier</h1>
@@ -229,21 +231,12 @@ function gallery() {
 
 			</div>
 
+
+                                
 			<div class="col260_3">
-				<h1>Nos prestations</h1>
-				<a id="example3" href="img/visites/typeE_b.jpg" >
-				<img src="img/visites/typeE_b.jpg" alt="" /></a>
-				<p>
-					Nos activités principales &agrave; Classic & Sport Autos sont
-					l'entretien, la réparation, la mise au point et l'amélioration de
-					performances de voitures de collection.
-				</p>
-				<p>
-					Nous sommes spécialisés en voitures anglaises, <i>Jaguar, Aston Martin,
-					Lotus, Austin Healey, MG, Triumph...</i> mais nous entretenons aussi d'autres
-					véhicules de collection, en particulier italiens, <i>Alfa Roméo, Ferrari, Fiat, Lancia...</i>
-				</p>
-				<a class="plus" href="engagements.html">Lire la suite >></a>
+                            <div id="fb-root"></div>
+                            <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+                            <fb:like-box href="https://www.facebook.com/pages/Classic-Sport-Autos/124036417669507?sk=wall" width="260" show_faces="false" stream="true" header="false"></fb:like-box>
 			</div>
 
 			<div class="clearit"></div>
