--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -43,6 +43,15 @@
 			*   Examples - images
 			*/
 
+			$("a[rel=190sl]").fancybox({
+				'transitionIn'		: 'none',
+				'transitionOut'		: 'none',
+				'titlePosition' 	: 'over',
+				'titleFormat'		: function(title, currentArray, currentIndex, currentOpts) {
+					return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+				}
+			});
+
 			$("a[rel=dynolite_apg_30]").fancybox({
 				'transitionIn'		: 'none',
 				'transitionOut'		: 'none',
@@ -115,6 +124,39 @@
 				<div class="col560">
 					<h1>Vente</h1>
 					<hr/>
+                                                <div class="vente-titre">                                        
+							<a rel="190sl" href="img/ventes/190sl3.jpg" title="sl 190">
+							<img class="pict" src="img/ventes/190sl3.jpg" alt="" /></a>
+							<h2>Mercedes 190 SL</h2>
+							<p>Prix: <strong>55 000&euro;</strong></p>
+							<p>Ville: <strong>38400 Saint Martin d'Hères</strong></p>
+						</div>
+						<div class="vente-col1">
+							<p>Ann&eacute;e-mod&egrave;le: <strong>1954</strong></p>
+							<p>Kilom&eacute;trage: <strong>99 000 KM</strong></p>
+						</div>
+						<div class="vente-col2">
+							<a rel="190sl" href="img/ventes/190sl.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sl.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sl2.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sl2.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sl4.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sl4.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sl5.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sl5.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190slpont.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slpont.jpg" alt="" /></a>                                                        
+						<p>
+						Vends Mercedes sl 190. Moteur à quatre cylindres, arbre à cames en tête, double carburateur Solex 
+                                                développant 105 chevaux à 5 700 tr/min, ls transmission et ses suspensions, pour un poids de près 
+                                                de 1 150 kg. Ses performances sont 171 km/h en vitesse de pointe, avec le 0 à 100 km/h en 14,5 s. 
+                                                Elle sera commercialisée jusqu'en 1963.
+						</p>
+						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 8 Mai 2011.</p>
+						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
+						</div>
+						<div class="clearit"></div>
+					<hr/>                                        
 						<div class="vente-titre">
 							<a rel="dynolite_apg_30" href="img/ventes/dynolite_apg30.jpg" title="Dynolite APG 30">
 							<img class="pict" src="img/ventes/dynolite_apg30_s.jpg" alt="" /></a>
