--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -147,7 +147,7 @@
 							<a rel="190sl" href="img/ventes/190slpont.jpg" title="190sl">
 							<img class="icone" src="img/ventes/190slpont.jpg" alt="" /></a>                                                        
 						<p>
-						Vends Mercedes sl 190. Moteur à quatre cylindres, arbre à cames en tête, double carburateur Solex 
+						Mercedes sl 190. Moteur à quatre cylindres, arbre à cames en tête, double carburateur Solex 
                                                 développant 105 chevaux à 5 700 tr/min, ls transmission et ses suspensions, pour un poids de près 
                                                 de 1 150 kg. Ses performances sont 171 km/h en vitesse de pointe, avec le 0 à 100 km/h en 14,5 s. 
                                                 Elle sera commercialisée jusqu'en 1963.
