--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -128,12 +128,12 @@
 							<a rel="190sl" href="img/ventes/190sl3.jpg" title="sl 190">
 							<img class="pict" src="img/ventes/190sl3.jpg" alt="" /></a>
 							<h2>Mercedes 190 SL</h2>
-							<p>Prix: <strong>55 000&euro;</strong></p>
+							<p>Prix: <strong>59 000&euro;</strong></p>
 							<p>Ville: <strong>38400 Saint Martin d'Hères</strong></p>
 						</div>
 						<div class="vente-col1">
-							<p>Ann&eacute;e-mod&egrave;le: <strong>1954</strong></p>
-							<p>Kilom&eacute;trage: <strong>99 000 KM</strong></p>
+							<p>Ann&eacute;e-mod&egrave;le: <strong>1961</strong></p>
+							<p>Kilom&eacute;trage: <strong>109 567 KM</strong></p>
 						</div>
 						<div class="vente-col2">
 							<a rel="190sl" href="img/ventes/190sl.jpg" title="190sl">
@@ -147,10 +147,10 @@
 							<a rel="190sl" href="img/ventes/190slpont.jpg" title="190sl">
 							<img class="icone" src="img/ventes/190slpont.jpg" alt="" /></a>                                                        
 						<p>
-						Mercedes sl 190. Moteur à quatre cylindres, arbre à cames en tête, double carburateur Solex 
+                                                Mercedes 190SL cabriolet blanche, intérieur cuir rouge, avec hardtop, en très bon état.</br>
+						Moteur à quatre cylindres, arbre à cames en tête, double carburateur Solex 
                                                 développant 105 chevaux à 5 700 tr/min, ls transmission et ses suspensions, pour un poids de près 
                                                 de 1 150 kg. Ses performances sont 171 km/h en vitesse de pointe, avec le 0 à 100 km/h en 14,5 s. 
-                                                Elle sera commercialisée jusqu'en 1963.
 						</p>
 						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 8 Mai 2011.</p>
 						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
