--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -148,9 +148,10 @@
 							<img class="icone" src="img/ventes/190slpont.jpg" alt="" /></a>                                                        
 						<p>
                                                 Mercedes 190SL cabriolet blanche, intérieur cuir rouge, avec hardtop, en très bon état.</br>
-						Moteur à quatre cylindres, arbre à cames en tête, double carburateur Solex 
-                                                développant 105 chevaux à 5 700 tr/min, ls transmission et ses suspensions, pour un poids de près 
-                                                de 1 150 kg. Ses performances sont 171 km/h en vitesse de pointe, avec le 0 à 100 km/h en 14,5 s. 
+						Belle peinture avec quelques petits défauts. 
+                                                Dessous propre sans corrosion, moteur fiable, très bonne pression d'huile.
+                                                Bel intérieur en cuir rouge.
+                                                Capote alpaga comme neuve. 
 						</p>
 						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 8 Mai 2011.</p>
 						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
