remplacé Actualité par Evènements à venir
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@34 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -144,8 +144,40 @@
 							<img class="icone" src="img/ventes/190sl4.jpg" alt="" /></a>
 							<a rel="190sl" href="img/ventes/190sl5.jpg" title="190sl">
 							<img class="icone" src="img/ventes/190sl5.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sl6.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sl6.jpg" alt="" /></a>                                                        
 							<a rel="190sl" href="img/ventes/190slpont.jpg" title="190sl">
 							<img class="icone" src="img/ventes/190slpont.jpg" alt="" /></a>                                                        
+							<a rel="190sl" href="img/ventes/190slpont2.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slpont2.jpg" alt="" /></a>           
+							<a rel="190sl" href="img/ventes/190slARD.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slARD.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190slARG.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slARG.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190slAVD.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slAVD.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190slcarter.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slcarter.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sldessous1.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sldessous1.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sldessous2.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sldessous2.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sldessous3.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sldessous3.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sldessous4.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sldessous4.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sldessous5.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sldessous5.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190sldessous6.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190sldessous6.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190slinterieur.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slinterieur.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190slinterieur2.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slinterieur2.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190slinterieur3.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slinterieur3.jpg" alt="" /></a>
+							<a rel="190sl" href="img/ventes/190slinterieur4.jpg" title="190sl">
+							<img class="icone" src="img/ventes/190slinterieur4.jpg" alt="" /></a>                                                     
 						<p>
                                                 Mercedes 190SL cabriolet blanche, intérieur cuir rouge, avec hardtop, en très bon état.</br>
 						Belle peinture avec quelques petits défauts. 
@@ -269,16 +301,14 @@
 				</ul>
 			</div>
 			<div class="col260">
-				<h2>Actualit&eacute;</h2>
+				<h2>Evènements à venir</h2>
 				<p>
-					<b>Dimanche 13 Mars</b>, Classic & Sport Autos &eacute;tait pr&eacute;sent
-					au <b>Salon des Collectionneurs</b> &agrave; Sassenage.
-					Une belle occasion de montrer deux voitures du garage, la Jaguar Type E
-					et la MG B. On a aussi notamment pu admirer une Alfa Romeo Giulietta, une Alfa Romeo
-					Montreal, une Austin Healey 3000 et une Salmson de 1960.<br/>
-					<b>Samedi 5 F&eacute;vrier</b>, shooting photo pour la Type E qui va se
-					retrouver sur la pochette du nouvel album d'un groupe Grenoblois de soul funk,
-					<a href="http://spockmarlone.free.fr/">Spock Marlone Section</a>.
+                                    <li><b>13 et 14 Mai</b> - <b>5% de réduction</b> sur les travaux engagés ces jours là.</li>
+                                    <li><b>13 Mai au soir</b> - rencontre autour d'un verre au garage.</li>
+                                    <li><b>22 Mai</b> - Uriage Cabriolet Classic, spécial 50ème anniv des Jaguars Type E.</li>
+                                    <li><b>12 Juin</b> - Nantua British Car show, les Bentley à l'honneur.</li>
+                                    <li><b>12 Juillet</b> - meeting et ballades, Jardin des Eaux Vives, Genève</li>
+                                    <li><b>1er Octobre</b> - spécial 50 ans de la Type E à Morges</li>
 				</p>
 			</div>
 			<div class="col260_3">
