--- a/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
@@ -102,16 +102,14 @@
 				</ul>
 			</div>
 			<div class="col260">
-				<h2>Actualit&eacute;</h2>
+				<h2>Evènements à venir</h2>
 				<p>
-					<b>Dimanche 13 Mars</b>, Classic & Sport Autos &eacute;tait pr&eacute;sent
-					au <b>Salon des Collectionneurs</b> &agrave; Sassenage.
-					Une belle occasion de montrer deux voitures du garage, la Jaguar Type E
-					et la MG B. On a aussi notamment pu admirer une Alfa Romeo Giulietta, une Alfa Romeo
-					Montreal, une Austin Healey 3000 et une Salmson de 1960.<br/>
-					<b>Samedi 5 F&eacute;vrier</b>, shooting photo pour la Type E qui va se
-					retrouver sur la pochette du nouvel album d'un groupe Grenoblois de soul funk,
-					<a href="http://spockmarlone.free.fr/">Spock Marlone Section</a>.
+                                    <li><b>13 et 14 Mai</b> - <b>5% de réduction</b> sur les travaux engagés ces jours là.</li>
+                                    <li><b>13 Mai au soir</b> - rencontre autour d'un verre au garage.</li>
+                                    <li><b>22 Mai</b> - Uriage Cabriolet Classic, spécial 50ème anniv des Jaguars Type E.</li>
+                                    <li><b>12 Juin</b> - Nantua British Car show, les Bentley à l'honneur.</li>
+                                    <li><b>12 Juillet</b> - meeting et ballades, Jardin des Eaux Vives, Genève</li>
+                                    <li><b>1er Octobre</b> - spécial 50 ans de la Type E à Morges</li>
 				</p>
 			</div>
 			<div class="col260_3">
