--- a/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
@@ -88,6 +88,7 @@
 <SCRIPT LANGUAGE="JavaScript" SRC="http://www.anciennesdefrance.com/pub/ban88x31_1.htm"></SCRIPT>
 <br/><a href="http://www.gtliens.com/" target="_blank"><img src="http://www.gtliens.com/images/gtliens_annuaire-auto.gif" alt="Annuaire et moteur de recherche automobile" width="88" height="31" border="0"></a>
 <br/><a href="http://gazoline.net"><img src="http://gazoline.net/annuaire/images/gazolineref.gif" width="88" height="31" border="0"></a>
+<br/><a href="http://www.automobile-sportive.com"><img src="http://www.automobile-sportive.com/images/logo240.png" width="88" height="31" border="0"></img></a>
 		</div>
 		<div class="car"></div>
 		<div class="pieddepage">
