Mercedes 190SL VENDUE enlevé Actualités périmées (portes ouvertes 13 et 14 mai et Uriage Cabriolets Classics 2011)
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@37 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -127,7 +127,7 @@
                                                 <div class="vente-titre">                                        
 							<a rel="190sl" href="img/ventes/190sl3.jpg" title="sl 190">
 							<img class="pict" src="img/ventes/190sl3.jpg" alt="" /></a>
-							<h2>Mercedes 190 SL</h2>
+                                                        <h2>Mercedes 190 SL <span style="padding-left: 15px; color:red; font-weight:bold;">VENDUE</span></h2>
 							<p>Prix: <strong>59 000&euro;</strong></p>
 							<p>Ville: <strong>38400 Saint Martin d'Hères</strong></p>
 						</div>
@@ -303,9 +303,6 @@
 			<div class="col260">
 				<h2>Evènements à venir</h2>
 				<p>
-                                    <li><b>13 et 14 Mai</b> - <b>5% de réduction</b> sur les travaux engagés ces jours là.</li>
-                                    <li><b>13 Mai au soir</b> - rencontre autour d'un verre au garage.</li>
-                                    <li><b>22 Mai</b> - Uriage Cabriolet Classic, spécial 50ème anniv des Jaguars Type E.</li>
                                     <li><b>12 Juin</b> - Nantua British Car show, les Bentley à l'honneur.</li>
                                     <li><b>12 Juillet</b> - meeting et ballades, Jardin des Eaux Vives, Genève</li>
                                     <li><b>1er Octobre</b> - spécial 50 ans de la Type E à Morges</li>
