--- a/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
@@ -106,7 +106,7 @@
 				<h2>Evènements à venir</h2>
 				<p>
                                     <li><b>12 Juin</b> - Nantua British Car show, les Bentley à l'honneur.</li>
-                                    <li><b>13 Juillet</b> - meeting et ballades en Type E avec la "9600HP" de Mars 61</li>
+                                    <li><b>13 Juillet</b> - meeting et ballades en Type E à Genève avec la "9600HP" de Mars 61</li>
                                     <li><b>1er Octobre</b> - spécial 50 ans de la Type E à Morges</li>
 				</p>
 			</div>
