essai svn netbeans
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@41 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -234,6 +234,7 @@ function gallery() {
 
                                 
 			<div class="col260_3">
+                            essai
                             <div id="fb-root"></div>
                             <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
                             <fb:like-box href="https://www.facebook.com/pages/Classic-Sport-Autos/124036417669507?sk=wall" width="260" show_faces="false" stream="true" header="false"></fb:like-box>
