--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -234,10 +234,9 @@ function gallery() {
 
                                 
 			<div class="col260_3">
-                            essai
                             <div id="fb-root"></div>
                             <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
-                            <fb:like-box href="https://www.facebook.com/pages/Classic-Sport-Autos/124036417669507?sk=wall" width="260" show_faces="false" stream="true" header="false"></fb:like-box>
+                            <fb:like-box href="https://www.facebook.com/pages/Classic-Sport-Autos/124036417669507" width="260" show_faces="false" stream="true" header="false"></fb:like-box>
 			</div>
 
 			<div class="clearit"></div>
