--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -43,6 +43,15 @@
 			*   Examples - images
 			*/
 
+			$("a[rel=daimler]").fancybox({
+				'transitionIn'		: 'none',
+				'transitionOut'		: 'none',
+				'titlePosition' 	: 'over',
+				'titleFormat'		: function(title, currentArray, currentIndex, currentOpts) {
+					return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+				}
+			});
+
 			$("a[rel=190sl]").fancybox({
 				'transitionIn'		: 'none',
 				'transitionOut'		: 'none',
@@ -123,6 +132,39 @@
 				<br/><br/>
 				<div class="col560">
 					<h1>Vente</h1>
+					<hr/>                                        
+                                                <div class="vente-titre">                                        
+							<a rel="daimler" href="img/ventes/daimler/daimler1.jpg" title="Daimler Sovereign">
+							<img class="pict" src="img/ventes/daimler/daimler1.jpg" alt="" /></a>
+                                                        <h2>Daimler Sovereign 4,2l</h2>
+                                                        <p>Ann&eacute;e-mod&egrave;le: <strong>1980</strong></p>
+                                                        <p>Ville: <strong>38400 Saint Martin d'Hères</strong></p>
+						</div>
+						<div class="vente-col1">
+							<p>Kilom&eacute;trage: <strong>93 000 KM</strong></p>
+						</div>
+						<div class="vente-col2">
+							<a rel="daimler" href="img/ventes/daimler/daimler2.jpg" title="Daimler Sovereign">
+							<img class="icone" src="img/ventes/daimler/daimler2.jpg" alt="" /></a>
+							<a rel="daimler" href="img/ventes/daimler/daimler3.jpg" title="Daimler Sovereign">
+							<img class="icone" src="img/ventes/daimler/daimler3.jpg" alt="" /></a>
+							<a rel="daimler" href="img/ventes/daimler/daimler4.jpg" title="Daimler Sovereign">
+							<img class="icone" src="img/ventes/daimler/daimler4.jpg" alt="" /></a>
+							<a rel="daimler" href="img/ventes/daimler/daimler5.jpg" title="Daimler Sovereign">
+							<img class="icone" src="img/ventes/daimler/daimler5.jpg" alt="" /></a>
+							<a rel="daimler" href="img/ventes/daimler/daimler6.jpg" title="Daimler Sovereign">
+							<img class="icone" src="img/ventes/daimler/daimler6.jpg" alt="" /></a>                                                        
+						<p>
+                                                Jolie Daimler Sovereign 4,2l de 1980. 93000km au compteur, même propriétaire depuis 1994 ayant acheté 
+                                                la voiture à 48303km. </p>
+                                                <p>
+                                                Nombreux travaux dont moteur refait à 86000km, crémaillère direction à 77600km, 
+                                                pompe à eau à 68200, boite de vitesse à 67400 et peinture à 65000km (1997).</p>
+                                                <p>Pneus Michelin XWX bon état.</p>
+						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 30 Juin 2011.</p>
+						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
+						</div>
+						<div class="clearit"></div>                                        
 					<hr/>
                                                 <div class="vente-titre">                                        
 							<a rel="190sl" href="img/ventes/190sl3.jpg" title="sl 190">
