set daimler price to 7500 euros
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@46 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -136,11 +136,12 @@
                                                 <div class="vente-titre">                                        
 							<a rel="daimler" href="img/ventes/daimler/daimler1.jpg" title="Daimler Sovereign">
 							<img class="pict" src="img/ventes/daimler/daimler1.jpg" alt="" /></a>
-                                                        <h2>Daimler Sovereign 4,2l</h2>
-                                                        <p>Ann&eacute;e-mod&egrave;le: <strong>1980</strong></p>
+                                                        <h2>Daimler Sovereign 4,2l</h2>                                                        
+                                                        <p>Prix: <strong>7 500&euro;</strong></p>
                                                         <p>Ville: <strong>38400 Saint Martin d'Hères</strong></p>
 						</div>
 						<div class="vente-col1">
+                                                        <p>Ann&eacute;e-mod&egrave;le: <strong>1980</strong></p>
 							<p>Kilom&eacute;trage: <strong>93 000 KM</strong></p>
 						</div>
 						<div class="vente-col2">
