--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -43,6 +43,15 @@
 			*   Examples - images
 			*/
 
+			$("a[rel=xk120]").fancybox({
+				'transitionIn'		: 'none',
+				'transitionOut'		: 'none',
+				'titlePosition' 	: 'over',
+				'titleFormat'		: function(title, currentArray, currentIndex, currentOpts) {
+					return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+				}
+			});
+
 			$("a[rel=daimler]").fancybox({
 				'transitionIn'		: 'none',
 				'transitionOut'		: 'none',
@@ -132,6 +141,37 @@
 				<br/><br/>
 				<div class="col560">
 					<h1>Vente</h1>
+                                        <hr/>                                        
+                                                <div class="vente-titre">                                        
+							<a rel="xk120" href="img/ventes/xk120/jaguarXK120_4.jpg" title="Jaguar XK 120 Roadster">
+							<img class="pict" src="img/ventes/xk120/jaguarXK120_4.jpg" alt="" /></a>
+                                                        <h2>Jaguar XK 120 Roadster</h2>                                                        
+                                                        <p>Prix: <strong>79 900&euro;</strong></p>
+                                                        <p>Ville: <strong>38400 Saint Martin d'Hères</strong></p>
+						</div>
+						<div class="vente-col1">
+                                                        <p>Ann&eacute;e-mod&egrave;le: <strong>1953</strong></p>
+							<p>Kilom&eacute;trage: <strong>28 578 KM</strong></p>
+						</div>
+						<div class="vente-col2">
+							<a rel="xk120" href="img/ventes/xk120/jaguarXK120_3.jpg" title="Jaguar XK 120 Roadster">
+							<img class="icone" src="img/ventes/xk120/jaguarXK120_3.jpg" alt="" /></a>
+                                                        <a rel="xk120" href="img/ventes/xk120/jaguarXK120_2.jpg" title="Jaguar XK 120 Roadster">
+							<img class="icone" src="img/ventes/xk120/jaguarXK120_2.jpg" alt="" /></a>
+                                                        <a rel="xk120" href="img/ventes/xk120/jaguarXK120_1.jpg" title="Jaguar XK 120 Roadster">
+							<img class="icone" src="img/ventes/xk120/jaguarXK120_1.jpg" alt="" /></a>
+						<p>
+                                                Belle Jaguar XK 120 roadster de 1953, conduite à droite d'origine, de couleur rouge avec de jolis sièges 
+                                                bi-ton.
+                                                </p>
+                                                <p>
+                                                Quelques modifications discrètes mais apportant plus de confort: ventilateur électrique, embrayage à 
+                                                commnande hydraulique, amortisseurs télescopiques à l'arrière.
+                                                </p>
+						<p style="font-size:x-small; font-style:italic;">Publi&eacute; le 5 Juillet 2011.</p>
+						<!--a class="plus" href="javascript:OuvrirPopup('popup.html', '', 'resizable=no, location=no, width=260, height=300, menubar=no, status=no, scrollbars=no, menubar=no','top=200,left=200')">D&eacute;tails >></a-->
+						</div>
+						<div class="clearit"></div>       
 					<hr/>                                        
                                                 <div class="vente-titre">                                        
 							<a rel="daimler" href="img/ventes/daimler/daimler1.jpg" title="Daimler Sovereign">
