mis à jour évènements à venir et ajouté auto-pedia.fr aux contacts
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@51 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -256,8 +256,8 @@ function gallery() {
 			<div class="col260">
 				<h2>Evènements à venir</h2>
 				<p>
-                                    <li><b>13 Juillet</b> - meeting et ballades en Type E à Genève avec la "9600HP" de Mars 61</li>
                                     <li><b>1er Octobre</b> - spécial 50 ans de la Type E à Morges</li>
+                                    <li>Retrouvez C&SA sur <b>auto-pedia.fr</b>, <a href="http://www.auto-pedia.fr/">l'encyclopédie des voitures anciennes</a></li>
 				</p>
 			</div>
 			<div class="col260_3">
