--- a/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
@@ -84,6 +84,7 @@
 			</div>
 			<div class="clearit"></div>
 			<br/><br/>
+<a href="http://www.auto-pedia.fr/"><img src="http://img.auto-pedia.fr/uploads/autopedia.jpg" width="284" height="31" border="0"></img></a>      
 <div style="text-align: left"><a href="http://www.auto-collection.org" target="_blank"><img src="http://www.auto-collection.org/images_fx/logoACnw.gif" border="0" width="120" height="40" alt="L'annuaire auto-collection.org"></a></div>
 <SCRIPT LANGUAGE="JavaScript" SRC="http://www.anciennesdefrance.com/pub/ban88x31_1.htm"></SCRIPT>
 <br/><a href="http://www.gtliens.com/" target="_blank"><img src="http://www.gtliens.com/images/gtliens_annuaire-auto.gif" alt="Annuaire et moteur de recherche automobile" width="88" height="31" border="0"></a>
@@ -105,7 +106,6 @@
 			<div class="col260">
 				<h2>Evènements à venir</h2>
 				<p>
-                                    <li><b>13 Juillet</b> - meeting et ballades en Type E à Genève avec la "9600HP" de Mars 61</li>
                                     <li><b>1er Octobre</b> - spécial 50 ans de la Type E à Morges</li>
 				</p>
 			</div>
