Daimler passe de 7500 à 6500 Amilcar 1928 dans "visites"
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@53 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/index.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/index.html
@@ -222,8 +222,8 @@ function gallery() {
 
 				<br/><br/>
 				<h1>Ils sont venus chez nous</h1>
-				<a rel="example_group2" href="img/visites/mgb_b.jpg" title="MGB">
-				<img class="pict" src="img/visites/mgb_s.jpg" alt="" /></a>
+				<a rel="example_group2" href="img/visites/amilcar_b.jpg" title="Amilcar 1928">
+				<img class="pict" src="img/visites/amilcar_s.jpg" alt="" /></a>
 				<a rel="example_group2" href="img/visites/Triumph_TR3_b.jpg" title="Triumph TR3">
 				<img class="pict" src="img/visites/Triumph_TR3_s.jpg" alt="" /></a>
 				<a rel="example_group2" href="img/visites/xk140_b.jpg" title="Jaguar XK140">
@@ -257,7 +257,7 @@ function gallery() {
 				<h2>Evènements à venir</h2>
 				<p>
                                     <li><b>1er Octobre</b> - spécial 50 ans de la Type E à Morges</li>
-                                    <li>Retrouvez C&SA sur <b>auto-pedia.fr</b>, <a href="http://www.auto-pedia.fr/">l'encyclopédie des voitures anciennes</a></li>
+                                    <li>Retrouvez C&SA sur <a href="http://www.auto-pedia.fr/"><b>auto-pedia.fr</b></a></li>
 				</p>
 			</div>
 			<div class="col260_3">
