<li><b>22 Octobre</b> - C&SA fête son <a href="http://www.auto-pedia.fr/un-an-classic-sport-auto/">1er anniversaire</a> autour d'un verre</li>
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@54 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/achatsventes.html
@@ -384,8 +384,9 @@
 				</ul>
 			</div>
 			<div class="col260">
-				<h2>Evènements à venir</h2>
+				<h2>Evènements</h2>
 				<p>
+                                    <li><b>22 Octobre</b> - C&SA fête son <a href="http://www.auto-pedia.fr/un-an-classic-sport-auto/">1er anniversaire</a> autour d'un verre</li>
                                     <li><b>1er Octobre</b> - spécial 50 ans de la Type E à Morges</li>
 				</p>
 			</div>
