MAJ des titres (php et html) des pages
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@59 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/atelier.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/atelier.html
@@ -9,7 +9,7 @@
 <meta name="description" content="D&eacute;couvrez en photos l'atelier et les publications de Classic et Sport Autos.">
 <meta name="keywords" content="atelier, photos, visites, publications">
 
-<title>Classic & Sport Autos</title>
+<title>Classic & Sport Autos - Photos de l'Atelier et Publications</title>
 <link rel="shortcut icon" href="images/csa.ico">
 <link rel="stylesheet" type="text/css" media="screen" href="css/init.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/layout.css">
