--- a/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/contact.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Contactez nous et venez nous rendre visite &agrave; Classic & Sport Autos">
 <meta name="keywords" content="contact, adresse, plan, annuaires, liens">
 
-<title>Classic & Sport Autos</title>
+<title>Classic & Sport Autos - Plan d'accès et Coordonnées</title>
 <link rel="shortcut icon" href="images/csa.ico">
 <link rel="stylesheet" type="text/css" media="screen" href="css/init.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/layout.css">
